# solem-blip-ble

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  yank-pypi.yml
docs/: ble_protocol.md  branching_and_release.md
scripts/: validate_device.py  validate_schedule_read.py  yank-pypi-releases.sh
src/solem_blip_ble/: __init__.py  client.py  const.py  exceptions.py  protocol.py  validate.py  validate_common.py  validate_schedule.py  validate_schedule_cli.py
tests/: test_client.py  test_irrigation_config.py  test_irrigation_config_capture.py  test_metadata_capture.py  test_protocol.py  test_validate_capture.py  test_validate_cli.py
tests/fixtures/: solem_irrigation_config_c8b961d44dcc8.jsonl  solem_metadata_c8b961d44dcc8.jsonl  solem_validate_20260601_c8b961d44dcc8.jsonl
